# multi-model-design-suite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  FIX_SUMMARY.md  Makefile  README.md  README_SCORING_SERVICE.md  STREAMLIT_CLOUD_FIX.md  app.py  docker-compose.prod.yml  docker-compose.yml  packages.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml  secrets.toml
_pages_disabled/: 1_Results.py
app/: __init__.py
app/ui/: __init__.py  components.py  theme.py
app/ui/styles/: __init__.py  aip365.css
app/wizard/: __init__.py  agents.py  state.py  steps.py
components/: agents.py  agents_real.py  auth.py  brand_compliance.py  brand_rules.py  cache_integration.py  caching.py  config.py  cost_tracker.py  design_comparison.py  enhanced_output.py  guardrails.py  image_processing.py  llm_client.py  logging_utils.py  models.py  orchestration.py  rag_service.py  rag_system.py  scoring_service.py  security.py  storage.py  streamlit_guardrails_ui.py  ux_enhancements.py  visual_feedback.py
data/: design_patterns.json
data/reports/: history.jsonl
data/reports/1b81551b/: report_20251226_154628.json  report_20251226_164739.json  report_20251226_165146.json
data/reports/1dbf017d/: report_20251225_152126.json
data/reports/28b35797/: report_20251225_164108.json
data/reports/2cde7583/: report_20251225_161651.json
data/reports/33de6e9c/: report_20251226_152845.json  report_20251226_153021.json
data/reports/35baf9f5/: report_20251223_121525.json
data/reports/40d84e5f/: report_20251223_130159.json
data/reports/474cac68/: report_20251225_204522.json
data/reports/561f1778/: report_20251226_175906.json
data/reports/5b0b4c69/: report_20251225_185416.json  report_20251225_185753.json  report_20251225_185756.json
data/reports/614d5f48/: report_20251223_124606.json  report_20251223_124718.json  report_20251223_124738.json
data/reports/8216a133/: report_20251226_173100.json
data/reports/84550ea4/: report_20251223_125517.json
data/reports/8a72c6de/: report_20251225_153438.json
data/reports/8ffee2ea/: report_20251225_192334.json
data/reports/943cacbc/: report_20251225_164946.json
data/reports/9c8f6bcb/: report_20251224_075057.json
data/reports/b5f81031/: report_20251224_080720.json
data/reports/bdecf9df/: report_20251225_184521.json
services/rag/: __init__.py  __main__.py  build_index.py  rag_service.py
tests/: conftest.py  test_agent_contract.py  test_image_processing_comprehensive.py  test_orchestration_resilience.py  test_rag_retrieval_shape.py  test_scoring_determinism.py  test_scoring_service.py
(+10 files in other folders)
